<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
	<item 
		android:visible="true" 
		android:enabled="true" 
		android:id="@+id/MENU_HOME_LOCATION" 
		android:title="@string/SetHomeLocation">
	<menu>
	<item android:id="@+id/MENU_GET_GPS_LOCATION" 
		android:title="@string/GetGPSLocation">
	</item>
	<item android:id="@+id/MENU_GET_NETWORK_LOCATION" android:title="@string/GetNetworkLocation">
	</item>
	<item android:title="@string/EnterLocation" 
		android:id="@+id/MENU_ENTER_LOCATION">
	</item>
</menu>
</item>
	<item 
		android:id="@+id/MENU_LOAD" 
		android:title="@string/Load" 
		android:visible="true" 
		android:enabled="true">
		<menu>
			<item 
				android:visible="true" 
				android:enabled="true" 
				android:id="@+id/MENU_LOAD_ELEM" 
				android:title="@string/LoadElem">
			</item>
			<item 
				android:visible="true" 
				android:enabled="true" 
				android:id="@+id/MENU_DOWNLOAD_AMATEUR_AMSAT" 
				android:title="@string/DownloadAmateurAmsatElem">
			</item>
			<item 
				android:visible="true" 
				android:enabled="true" 
				android:id="@+id/MENU_DOWNLOAD_AMATEUR_CELESTRAK" 
				android:title="@string/DownloadAmateurCelestrakElem">
			</item>
			<item 
				android:visible="true" 
				android:enabled="true" 
				android:id="@+id/MENU_DOWNLOAD_CUBESAT_CELESTRAK" 
				android:title="@string/DownloadCubesatCelestrakElem">
			</item>
			<item 
				android:visible="true" 
				android:enabled="true" 
				android:id="@+id/MENU_DOWNLOAD_WEATHER_CELESTRAK" 
				android:title="@string/DownloadWeatherCelestrakElem">
			</item>
			<item 
				android:visible="true" 
				android:enabled="true" 
				android:id="@+id/MENU_DOWNLOAD_RESOURCES_CELESTRAK" 
				android:title="@string/DownloadResourcesCelestrakElem">
			</item>
			<item 
				android:visible="true" 
				android:enabled="true" 
				android:id="@+id/MENU_DOWNLOAD_NEW_CELESTRAK" 
				android:title="@string/DownloadNewCelestrakElem">
			</item>
		</menu>
	</item>

	<item
		android:id="@+id/MENU_TIME"
		android:title="@string/TimeDisplay"
		android:visible="true"
		android:enabled="true">
		<menu>
			<item
				android:visible="true"
				android:enabled="true"
				android:id="@+id/MENU_TIMELOCAL"
				android:title="@string/TimeLoc">
			</item>
			<item
				android:visible="true"
				android:enabled="true"
				android:id="@+id/MENU_TIMEUTC"
				android:title="@string/TimeUTC">
			</item>
		</menu>
	</item>

	<item
		android:id="@+id/MENU_UITHEME"
		android:title="@string/UITheme"
		android:visible="true"
		android:enabled="true">
		<menu>
			<item
				android:visible="true"
				android:enabled="true"
				android:id="@+id/MENU_UIDARK"
				android:title="@string/Dark">
			</item>
			<item
				android:visible="true"
				android:enabled="true"
				android:id="@+id/MENU_UILIGHT"
				android:title="@string/Light">
			</item>
		</menu>
	</item>

	<item
		android:id="@+id/MENU_SATSORT"
		android:title="@string/SatelliteSort"
		android:visible="true"
		android:enabled="true">
		<menu>
			<item
				android:visible="true"
				android:enabled="true"
				android:id="@+id/MENU_SATSORTNAMEASC"
				android:title="@string/SatSortByNameAsc">
			</item>
			<item
				android:visible="true"
				android:enabled="true"
				android:id="@+id/MENU_SATSORTNAMEDESC"
				android:title="@string/SatSortByNameDesc">
			</item>
			<item
				android:visible="true"
				android:enabled="true"
				android:id="@+id/MENU_SATSORTCATASC"
				android:title="@string/SatSortByCatAsc">
			</item>
			<item
				android:visible="true"
				android:enabled="true"
				android:id="@+id/MENU_SATSORTCATDESC"
				android:title="@string/SatSortByCatDesc">
			</item>
		</menu>
	</item>

	<item 
		android:id="@+id/LAUNCH_GROUND_VIEW" 
		android:title="@string/MapView">
	</item>

	<item 
		android:visible="true" 
		android:enabled="true" 
		android:id="@+id/MENU_HELP" 
		android:title="@string/Help">
	</item>
	<item 
		android:visible="true" 
		android:enabled="true" 
		android:id="@+id/MENU_ABOUT" 
		android:title="@string/About">
	</item>
</menu>
