<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:orientation="vertical">

	<RelativeLayout
		android:id="@+id/MAP_VIEW_HEADER"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">

		<TextView
			android:id="@+id/MAP_VIEW_SATELLITE_NAME"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical|center_horizontal"
			android:text="@string/SatelliteName"></TextView>

		<TextView
			android:id="@+id/MAP_VIEW_SAT_LAT_LON"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/MAP_VIEW_SATELLITE_NAME"
			android:gravity="center_vertical|center_horizontal"
			android:text="@string/SatelliteLatitudeLongitude"></TextView>

		<TextView
			android:id="@+id/MAP_VIEW_OBS_LAT_LON"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/MAP_VIEW_SAT_LAT_LON"
			android:gravity="center_vertical|center_horizontal"
			android:text="@string/ObserverLatitudeLongitude"></TextView>

		<FrameLayout
			android:id="@+id/MAP_VIEW_FRAME"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/MAP_VIEW_OBS_LAT_LON"></FrameLayout>
	</RelativeLayout>
</LinearLayout>
