<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/backgroundColor"
    android:id="@+id/LLparent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/LinearLayout02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:textColor="@color/textColor"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/Satellite" />

            <Spinner
                android:id="@+id/SatelliteSelectorSpinner"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:prompt="@string/SatellitePrompt" 
                android:dropDownWidth="wrap_content"
                android:minWidth="200dp">
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dip"
            android:orientation="vertical"
            android:layout_marginStart="15dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:textColor="@color/textColor"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/CalculatePassesForTheNext" />

            <Spinner
                android:id="@+id/TimeSelectorSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:entries="@array/Times"
                android:prompt="@string/TimeSelectorPrompt" >
            </Spinner>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/StartTime"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:textColor="@color/textColor"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/StartTime" />

    <LinearLayout
        android:id="@+id/LinearLayout13"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/CalculatePassButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/CalculatePass" >
        </Button>

        <ProgressBar
            android:id="@+id/PassProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible" >
        </ProgressBar>

        <Button
            android:id="@+id/SetStartTimeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/SetStartTime" >
        </Button>
    </LinearLayout>

    <TextView
        android:id="@+id/latlon_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:text="" >
    </TextView>

    <ListView
        android:id="@+id/PASS_LIST_VIEW"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:divider="#FFCC00"
        android:dividerHeight="2dp"
        android:textColor="@color/textColor"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical"
        android:divider="#FFCC00"
        android:dividerHeight="2dp"
        android:textColor="@color/textColor"
        />

</LinearLayout>