<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/START_TIME_DIALOG"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:padding="0dp"
	android:layout_height="match_parent">
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<TimePicker
				android:id="@+id/TimePicker01"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">
			</TimePicker>
			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="end"
				android:paddingRight="10dp"
				android:paddingEnd="10dp">

				<Button
					android:id="@+id/ButtonTimeCancel"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_toStartOf="@id/ButtonTimeUseCurrent"
					android:layout_toLeftOf="@id/ButtonTimeUseCurrent"
					android:background="@android:color/transparent"
					android:onClick="dateTimedialogButtonClickHandler"
					android:text="@string/cancel"
					android:textColor="@color/bluelink" />
				<Button
					android:id="@+id/ButtonTimeUseCurrent"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:onClick="dateTimedialogButtonClickHandler"
					android:layout_marginLeft="6dp"
					android:textColor="@color/bluelink"
					android:layout_toLeftOf="@id/ButtonTimeSet"
					android:background="@android:color/transparent"
					android:text="@string/use_current"
					android:layout_toStartOf="@id/ButtonTimeSet"
					android:layout_marginStart="6dp" />
				<Button
					android:id="@+id/ButtonTimeSet"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:onClick="dateTimedialogButtonClickHandler"
					android:layout_alignParentRight="true"
					android:textColor="@color/bluelink"
					android:background="@android:color/transparent"
					android:text="@string/set"
					android:layout_alignParentEnd="true" />
			</RelativeLayout>
			<DatePicker
				android:id="@+id/DatePicker01"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:calendarViewShown="false">
			</DatePicker>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
